[upload]-add html code
Description:
add html code for index file

--- a/According/index.html
+++ b/According/index.html
@@ -1,1 +1,86 @@
 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+</head>
+
+<body>
+  <div class="contanier">
+    <header>
+      <i class="fa-solid fa-star fa-xl" style="color: #6638f0;"></i>
+      <h2>Question Box</h2>
+    </header>
+    <div id="questionRow">
+      <div>
+        <div id="header">
+          <h3>Lorem, ipsum dolor sit amet consectetur
+            adipisicing elit.</h3>
+          <i class="fa-solid fa-circle-plus fa-xl" style="color: #6638f0;"></i>
+
+        </div>
+        <div id="paragragh">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore minima quaerat voluptate magnam tempora
+            vitae dolores atque, nihil ex quasi, laborum perspiciatis, porro ipsa reiciendis quibusdam nisi! Modi,
+            corrupti incidunt.</p>
+        </div>
+      </div>
+      <div>
+        <div id="header">
+          <h3>Lorem, ipsum dolor sit amet consectetur
+            adipisicing elit.</h3>
+          <i class="fa-solid fa-circle-plus fa-xl" style="color: #6638f0;"></i>
+        </div>
+        <div id="paragragh">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore minima quaerat voluptate magnam tempora
+            vitae dolores atque, nihil ex quasi, laborum perspiciatis, porro ipsa reiciendis quibusdam nisi! Modi,
+            corrupti incidunt.</p>
+        </div>
+      </div>
+      <div>
+        <div id="header">
+          <h3>Lorem, ipsum dolor sit amet consectetur
+            adipisicing elit.</h3>
+          <i class="fa-solid fa-circle-plus fa-xl" style="color: #6638f0;"></i>
+        </div>
+        <div id="paragragh">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore minima quaerat voluptate magnam tempora
+            vitae dolores atque, nihil ex quasi, laborum perspiciatis, porro ipsa reiciendis quibusdam nisi! Modi,
+            corrupti incidunt.</p>
+        </div>
+      </div>
+      <div>
+        <div id="header">
+          <h3>Lorem, ipsum dolor sit amet consectetur
+            adipisicing elit.</h3>
+          <i class="fa-solid fa-circle-plus fa-xl" style="color: #6638f0;"></i>
+        </div>
+        <div id="paragragh">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore minima quaerat voluptate magnam tempora
+            vitae dolores atque, nihil ex quasi, laborum perspiciatis, porro ipsa reiciendis quibusdam nisi! Modi,
+            corrupti incidunt.</p>
+        </div>
+      </div>
+      <div>
+        <div id="header">
+          <h3>Lorem, ipsum dolor sit amet consectetur
+            adipisicing elit.</h3>
+          <i class="fa-solid fa-circle-plus fa-xl" style="color: #6638f0;"></i>
+        </div>
+        <div id="paragragh">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore minima quaerat voluptate magnam tempora
+            vitae dolores atque, nihil ex quasi, laborum perspiciatis, porro ipsa reiciendis quibusdam nisi! Modi,
+            corrupti incidunt.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="script.js"></script>
+</body>
+
+</html>
