--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+        <div class="row">
+            <div class="card"></div>
+            <div class="card"></div>
+        </div>
+    </div>
     
 </body>
 </html>
