[add]-card basic code
Description:
add basic card code
style
+
html

--- a/index.html
+++ b/index.html
@@ -1,18 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
         <div class="row">
-            <div class="card"></div>
-            <div class="card"></div>
+            <div class="card">
+                <div class="image"></div>
+                <div class="description">
+                    <header>
+                        <h2>ACCORDING</h2>
+                    </header>
+                    <div class="paragraph">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem modi at necessitatibus, minima
+                            laudantium quae sit blanditiis quibusdam nostrum veniam veritatis sapiente laboriosam.
+                            Reiciendis aut aliquid odio dolores quaerat sint!</p>
+                    </div>
+                </div>
+                <div class="linked">
+                    <a href="">SHOW</a>
+                </div>
+            </div>
+            <!-- <div class="card"></div> -->
         </div>
     </div>
-    
+
 </body>
+
 </html>
