[add]-add background
Description:
add background pattern.
+
add logo site

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Preview</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon website" href="https://i.pinimg.com/564x/6a/20/83/6a2083cdceb5a0a70e9a2f94807775be.jpg">
 </head>
 
 <body>
@@ -18,16 +19,17 @@
                         <h2>ACCORDING</h2>
                     </header>
                     <div class="paragraph">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem modi at necessitatibus, minima
-                            laudantium quae sit blanditiis quibusdam nostrum veniam veritatis sapiente laboriosam.
-                            Reiciendis aut aliquid odio dolores quaerat sint!</p>
+                        <p>This is a simple project to practice more JavaScript. All design files are linked in the
+                            repository.
+                            This is an According, the most challenging of which is using a loop of fours and a
+                            responsive code. It is not necessary to select each element separately.
+                            I hope you find it interesting.</p>
                     </div>
                 </div>
                 <div class="linked">
                     <a href="">SHOW</a>
                 </div>
             </div>
-            <!-- <div class="card"></div> -->
         </div>
     </div>
 
