--- a/Interactive comments/index.html
+++ b/Interactive comments/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <div class="container">
+        <header></header>
+        <FORm>
+            <h2>Submite your comment here:</h2>
+            <textarea id="" cols="30" rows="10" placeholder="my idea is that..."></textarea>
+            <input type="submit">
+        </FORm>
+    </div>
+    <div class="idea">
+        <ul></ul>
+    </div>
+
     <script src="script.js"></script>
 </body>
+
 </html>
