[add]-form select
Description:
select form and event submit

--- a/Interactive comments/index.html
+++ b/Interactive comments/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <header></header>
-        <FORm>
+        <FORm id="form">
             <h2>Submite your comment here:</h2>
             <textarea id="" cols="30" rows="10" placeholder="my idea is that..."></textarea>
             <input type="submit">
