--- a/Interactive comments/index.html
+++ b/Interactive comments/index.html
@@ -13,12 +13,12 @@
         <header></header>
         <FORm id="form">
             <h2>Submite your comment here:</h2>
-            <textarea id="" cols="30" rows="10" placeholder="my idea is that..."></textarea>
-            <input type="submit">
+            <textarea id="textA" cols="30" rows="10" placeholder="my idea is that..."></textarea>
+            <input id="btn" type="submit">
         </FORm>
     </div>
     <div class="idea">
-        <ul></ul>
+        <ul id="ul"></ul>
     </div>
 
     <script src="script.js"></script>
