[add]-card 2 basice
Description:
add card2 for next repository.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,23 @@
                     <a href="https://tboumpsh.github.io/Chaleng/According">SHOW</a>
                 </div>
             </div>
+            <!-- interactive comment card -->
+            <div class="card">
+                <div class="image1"></div>
+                <div class="description">
+                    <header>
+                        <h2>interactive comment</h2>
+                    </header>
+                    <div class="paragraph">
+                        <p>This is a project to challenge the editing of an inPot, eliminating it.
+                            This project was all challenging for me.
+                            Here you try to make everything like Sari.</p>
+                    </div>
+                </div>
+                <div class="linked">
+                    <a href="https://tboumpsh.github.io/Chaleng/Interactive%20comments">SHOW</a>
+                </div>
+            </div>
         </div>
     </div>
 
