[initializing]-basic project
Description:
define basic project code

--- a/Interactive comments/index.html
+++ b/Interactive comments/index.html
@@ -9,8 +9,12 @@
 </head>
 
 <body>
+    <!-- grandparent section -->
     <div class="container">
-        <header></header>
+        <header>
+            <h1>Comments section</h1>
+            <p>It has the ability to edit and delete comments and reply messages. This is a JavaScript exercise written without using any libraries.</p>
+        </header>
         <FORm id="form">
             <h2>Submite your comment here:</h2>
             <textarea id="textA" cols="30" rows="10" placeholder="my idea is that..."></textarea>
