[create]-basic structure division
Description:
create basic structure all component in viewport

--- a/Interactive pricing component/index.html
+++ b/Interactive pricing component/index.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+    <div class="container">
+        <div class="rightSide"></div>
+        <div class="leftSide"></div>
+    </div>
     <script src="script.js"></script>
 </body>
 
