[finish]-main content
Description:
create main content part
+slider
+toggle button
+text

--- a/Interactive pricing component/index.html
+++ b/Interactive pricing component/index.html
@@ -17,11 +17,26 @@
                     <h4>100K PAGEVIEWS</h4>
                 </div>
                 <div class="rightText">
-                    <h1></h1>
+                    <h1 id="text">251253614525</h1>
                 </div>
             </div>
-            <div class="mainContent"></div>
-            <div class="btnTag"></div>
+            <div class="mainContent">
+                <input type="range" id="slider" min="1" max="100">
+            </div>
+            <div class="btnTag">
+                <div class="btnLeft">
+                    <p>Monthly Billing</p>
+                    <!-- toggle button -->
+                    <label class="switch">
+                        <input type="checkbox">
+                        <span class="slider round"></span>
+                    </label>
+                </div>
+                <div class="btnRight">
+                    <p>Year Billing</p>
+                    <a href="#">25% discount</a>
+                </div>
+            </div>
         </div>
         <div class="leftSide">
             <div class="childeLeft">
