[add]-slider value show
Description:
slider value show in html
+innerhtml
+oninput
+value

--- a/Interactive pricing component/index.html
+++ b/Interactive pricing component/index.html
@@ -17,7 +17,7 @@
                     <h4>100K PAGEVIEWS</h4>
                 </div>
                 <div class="rightText">
-                    <h1 id="text">251253614525</h1>
+                    <h1 id="text">$ 50   <span>/month</span></h1>
                 </div>
             </div>
             <div class="mainContent">
