[add+change]-font and style
Description:
add font
+ change style css and background and color

--- a/Interactive pricing component/index.html
+++ b/Interactive pricing component/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+    <link href='https://fonts.googleapis.com/css?family=Manrope' rel='stylesheet'>
 </head>
 
 <body>
@@ -14,14 +15,14 @@
         <div class="rightSide">
             <div class="title">
                 <div class="leftText">
-                    <h4>100K PAGEVIEWS</h4>
+                    <h4>100K &nbsp; PAGEVIEWS</h4>
                 </div>
                 <div class="rightText">
-                    <h1 id="text">$ 50   <span>/month</span></h1>
+                    <h1 id="text">$ 50 <span>/month</span></h1>
                 </div>
             </div>
             <div class="mainContent">
-                <input type="range" id="slider" min="1" max="100">
+                <input type="range" id="slider" min="1" max="500">
             </div>
             <div class="btnTag">
                 <div class="btnLeft">
