--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="image1"></div>
                 <div class="description">
                     <header>
-                        <h2>interactive comment</h2>
+                        <h2>INTERACTIVE COMMENT</h2>
                     </header>
                     <div class="paragraph">
                         <p>This is a project to challenge the editing of an inPot, eliminating it.
@@ -45,6 +45,23 @@
                 </div>
                 <div class="linked">
                     <a href="https://tboumpsh.github.io/Chaleng/Interactive%20comments">SHOW</a>
+                </div>
+            </div>
+            <!-- Interactive pricing component -->
+            <div class="card">
+                <div class="image2"></div>
+                <div class="description">
+                    <header>
+                        <h2>INTERACTIVE PRICE</h2>
+                    </header>
+                    <div class="paragraph">
+                        <p>This is a shopping card. You can see the price you choose by dragging the slider button. A
+                            simple project with javascript and css Chinese structure skills will also increase your
+                            skills.</p>
+                    </div>
+                </div>
+                <div class="linked">
+                    <a href="https://tboumpsh.github.io/Chaleng/Interactive%20pricing%20component">SHOW</a>
                 </div>
             </div>
         </div>
