[create]-basic structure html
Description:
create basic division html

--- a/Job listings with filtering/index.html
+++ b/Job listings with filtering/index.html
@@ -9,6 +9,21 @@
 </head>
 
 <body>
+    <div class="container">
+        <div class="upheader"></div>
+        <div class="mainContent">
+            <div class="columns">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 
