[create]-ui structure
Description:
create ui design.

--- a/Job listings with filtering/index.html
+++ b/Job listings with filtering/index.html
@@ -10,17 +10,187 @@
 
 <body>
     <div class="container">
-        <div class="upheader"></div>
+        <div class="upheader">
+            <div class="search">
+                <input type="text" placeholder="search">
+            </div>
+        </div>
         <div class="mainContent">
             <div class="columns">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+                <div>
+                    <div class="image"><img
+                            src="https://www.kindpng.com/picc/m/18-187491_api-transparent-logo-hd-png-download.png"
+                            alt=""></div>
+                    <div class="information">
+                        <div class="leftInfo">
+                            <div class="title">
+                                <h4>Photomap</h4>
+                                <a href="">new</a>
+                                <a href="">left</a>
+                            </div>
+                            <div class="name">
+                                <h2>senior Frontend Developer</h2>
+                            </div>
+                            <div class="date">
+                                <p>1 day</p>
+                                <p>1235</p>
+                                <p>uk</p>
+                            </div>
+                        </div>
+                        <div class="rightInfo"></div>
+                    </div>
+                </div>
+                <div>
+                    <div class="image"><img
+                            src="https://www.kindpng.com/picc/m/18-187491_api-transparent-logo-hd-png-download.png"
+                            alt=""></div>
+                    <div class="information">
+                        <div class="leftInfo">
+                            <div class="title">
+                                <h4>Photomap</h4>
+                            </div>
+                            <div class="name">
+                                <h2>senior Frontend Developer</h2>
+                            </div>
+                            <div class="date">
+                                <p>1 day</p>
+                                <p>1235</p>
+                                <p>uk</p>
+                            </div>
+                        </div>
+                        <div class="rightInfo"></div>
+                    </div>
+                </div>
+                <div>
+                    <div class="image"><img
+                            src="https://www.kindpng.com/picc/m/18-187491_api-transparent-logo-hd-png-download.png"
+                            alt=""></div>
+                    <div class="information">
+                        <div class="leftInfo">
+                            <div class="title">
+                                <h4>Photomap</h4>
+                            </div>
+                            <div class="name">
+                                <h2>senior Frontend Developer</h2>
+                            </div>
+                            <div class="date">
+                                <p>1 day</p>
+                                <p>1235</p>
+                                <p>uk</p>
+                            </div>
+                        </div>
+                        <div class="rightInfo"></div>
+                    </div>
+                </div>
+                <div>
+                    <div class="image"><img
+                            src="https://www.kindpng.com/picc/m/18-187491_api-transparent-logo-hd-png-download.png"
+                            alt=""></div>
+                    <div class="information">
+                        <div class="leftInfo">
+                            <div class="title">
+                                <h4>Photomap</h4>
+                            </div>
+                            <div class="name">
+                                <h2>senior Frontend Developer</h2>
+                            </div>
+                            <div class="date">
+                                <p>1 day</p>
+                                <p>1235</p>
+                                <p>uk</p>
+                            </div>
+                        </div>
+                        <div class="rightInfo"></div>
+                    </div>
+                </div>
+                <div>
+                    <div class="image"><img
+                            src="https://www.kindpng.com/picc/m/18-187491_api-transparent-logo-hd-png-download.png"
+                            alt=""></div>
+                    <div class="information">
+                        <div class="leftInfo">
+                            <div class="title">
+                                <h4>Photomap</h4>
+                            </div>
+                            <div class="name">
+                                <h2>senior Frontend Developer</h2>
+                            </div>
+                            <div class="date">
+                                <p>1 day</p>
+                                <p>1235</p>
+                                <p>uk</p>
+                            </div>
+                        </div>
+                        <div class="rightInfo"></div>
+                    </div>
+                </div>
+                <div>
+                    <div class="image"><img
+                            src="https://www.kindpng.com/picc/m/18-187491_api-transparent-logo-hd-png-download.png"
+                            alt=""></div>
+                    <div class="information">
+                        <div class="leftInfo">
+                            <div class="title">
+                                <h4>Photomap</h4>
+                                <a href="">new</a>
+                                <a href="">left</a>
+                            </div>
+                            <div class="name">
+                                <h2>senior Frontend Developer</h2>
+                            </div>
+                            <div class="date">
+                                <p>1 day</p>
+                                <p>1235</p>
+                                <p>uk</p>
+                            </div>
+                        </div>
+                        <div class="rightInfo"></div>
+                    </div>
+                </div>
+                <div>
+                    <div class="image"><img
+                            src="https://www.kindpng.com/picc/m/18-187491_api-transparent-logo-hd-png-download.png"
+                            alt=""></div>
+                    <div class="information">
+                        <div class="leftInfo">
+                            <div class="title">
+                                <h4>Photomap</h4>
+                                <a href="">new</a>
+                                <a href="">left</a>
+                            </div>
+                            <div class="name">
+                                <h2>senior Frontend Developer</h2>
+                            </div>
+                            <div class="date">
+                                <p>1 day</p>
+                                <p>1235</p>
+                                <p>uk</p>
+                            </div>
+                        </div>
+                        <div class="rightInfo"></div>
+                    </div>
+                </div>
+                <div>
+                    <div class="image"><img
+                            src="https://www.kindpng.com/picc/m/18-187491_api-transparent-logo-hd-png-download.png"
+                            alt=""></div>
+                    <div class="information">
+                        <div class="leftInfo">
+                            <div class="title">
+                                <h4>Photomap</h4>
+                            </div>
+                            <div class="name">
+                                <h2>senior Frontend Developer</h2>
+                            </div>
+                            <div class="date">
+                                <p>1 day</p>
+                                <p>1235</p>
+                                <p>uk</p>
+                            </div>
+                        </div>
+                        <div class="rightInfo"></div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
