--- a/Job listings with filtering/index.html
+++ b/Job listings with filtering/index.html
@@ -11,8 +11,8 @@
 <body>
     <div class="container">
         <div class="upheader">
-            <div class="search">
-                <input type="text" placeholder="search">
+            <div id="box" class="search">
+                <input id="search" type="text" placeholder="search">
             </div>
         </div>
         <div class="mainContent">
