[create]-tags option
Description:
Create tags for products

--- a/Job listings with filtering/index.html
+++ b/Job listings with filtering/index.html
@@ -58,7 +58,9 @@
                                 <p>uk</p>
                             </div>
                         </div>
-                        <div class="rightInfo"></div>
+                        <div class="rightInfo">
+                            <option>NodeJs</option>
+                        </div>
                     </div>
                 </div>
                 <div>
@@ -79,7 +81,9 @@
                                 <p>uk</p>
                             </div>
                         </div>
-                        <div class="rightInfo"></div>
+                        <div class="rightInfo">
+                            <option>designer</option>
+                        </div>
                     </div>
                 </div>
                 <div>
@@ -167,7 +171,9 @@
                                 <p>uk</p>
                             </div>
                         </div>
-                        <div class="rightInfo"></div>
+                        <div class="rightInfo">
+                            <option>Css</option>
+                        </div>
                     </div>
                 </div>
                 <div>
