--- a/Job listings with filtering/index.html
+++ b/Job listings with filtering/index.html
@@ -82,7 +82,7 @@
                             </div>
                         </div>
                         <div class="rightInfo">
-                            <option>designer</option>
+                            <option>NodeJs</option>
                         </div>
                     </div>
                 </div>
