--- a/Job listings with filtering/index.html
+++ b/Job listings with filtering/index.html
@@ -24,7 +24,7 @@
                     <div class="information">
                         <div class="leftInfo">
                             <div class="title">
-                                <h4>Photomap</h4>
+                                <h4>Figma</h4>
                                 <a href="">new</a>
                                 <a href="">left</a>
                             </div>
@@ -70,7 +70,7 @@
                     <div class="information">
                         <div class="leftInfo">
                             <div class="title">
-                                <h4>Photomap</h4>
+                                <h4>Next.Js</h4>
                             </div>
                             <div class="name">
                                 <h2>senior Frontend Developer</h2>
@@ -93,7 +93,7 @@
                     <div class="information">
                         <div class="leftInfo">
                             <div class="title">
-                                <h4>Photomap</h4>
+                                <h4>React</h4>
                             </div>
                             <div class="name">
                                 <h2>senior Frontend Developer</h2>
@@ -114,7 +114,7 @@
                     <div class="information">
                         <div class="leftInfo">
                             <div class="title">
-                                <h4>Photomap</h4>
+                                <h4>Node.Js</h4>
                             </div>
                             <div class="name">
                                 <h2>senior Frontend Developer</h2>
@@ -135,7 +135,7 @@
                     <div class="information">
                         <div class="leftInfo">
                             <div class="title">
-                                <h4>Photomap</h4>
+                                <h4>Github</h4>
                                 <a href="">new</a>
                                 <a href="">left</a>
                             </div>
@@ -158,7 +158,7 @@
                     <div class="information">
                         <div class="leftInfo">
                             <div class="title">
-                                <h4>Photomap</h4>
+                                <h4>C++</h4>
                                 <a href="">new</a>
                                 <a href="">left</a>
                             </div>
@@ -183,7 +183,7 @@
                     <div class="information">
                         <div class="leftInfo">
                             <div class="title">
-                                <h4>Photomap</h4>
+                                <h4>HTML</h4>
                             </div>
                             <div class="name">
                                 <h2>senior Frontend Developer</h2>
