[create]-The fourth card
Description:
Making the fourth card for filter project

--- a/index.html
+++ b/index.html
@@ -64,6 +64,23 @@
                     <a href="https://tboumpsh.github.io/Chaleng/Interactive%20pricing%20component">SHOW</a>
                 </div>
             </div>
+            <!-- Job listings with filtering -->
+            <div class="card">
+                <div class="image3"></div>
+                <div class="description">
+                    <header>
+                        <h2>FILTERING</h2>
+                    </header>
+                    <div class="paragraph">
+                        <p>This is a training video filtering project. Here I tried to get the array to give information
+                            to each sequel, and then check out the inputs of the search inputs to see what the user is
+                            looking for. I tried to use my own simple and innovative solution.</p>
+                    </div>
+                </div>
+                <div class="linked">
+                    <a href="https://tboumpsh.github.io/Challeng/Job%20listings%20with%20filtering">SHOW</a>
+                </div>
+            </div>
         </div>
     </div>
 
